:arrow_up: upgrading dependencies

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bs": "lerna bootstrap",
     "clean": "lerna clean --yes",
     "transpile": "cd ./packages/common && yarn transpile",
-    "web-start": "cd ./packages/webapp && yarn start"
+    "web-start": "cd ./packages/webapp && yarn start",
+	  "audit:fix": "npx yarn-audit-fix"
   }
 }
