--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -12,16 +12,16 @@
   "dependencies": {
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "^5.0.1"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.0.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "@babel/preset-react": "^7.0.0",
-    "babel-cli": "^6.26.0"
+    "babel-preset-react": "^6.24.1"
   }
 }
