--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -5,8 +5,7 @@
   "dependencies": {
     "common": "^0.1.0",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "^5.0.1"
+    "react-dom": "^16.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,6 +30,7 @@
   },
   "devDependencies": {
     "webpack-cli": "^3.3.2",
-    "which": "^2.0.2"
+    "which": "^2.0.2",
+    "react-scripts": "^5.0.1"
   }
 }
