--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -4,17 +4,20 @@
   "private": true,
   "dependencies": {
     "common": "^0.1.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -29,8 +32,8 @@
     ]
   },
   "devDependencies": {
+    "react-scripts": "^5.0.1",
     "webpack-cli": "^3.3.2",
-    "which": "^2.0.2",
-    "react-scripts": "^5.0.1"
+    "which": "^2.0.2"
   }
 }
