--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -13,6 +13,15 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "jest": {
+    "coverageReporters": [
+      "text",
+      "cobertura"
+    ]
+  },
+  "jest-junit": {
+    "usePathForSuiteName": "true"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -32,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "jest-junit": "^14.0.1",
     "react-scripts": "^5.0.1",
     "webpack-cli": "^3.3.2",
     "which": "^2.0.2"
