--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -20,7 +20,8 @@
     ]
   },
   "jest-junit": {
-    "usePathForSuiteName": "true"
+    "usePathForSuiteName": "true",
+    "suiteName": "WebApp"
   },
   "eslintConfig": {
     "extends": [
