--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "dev", "stage", "master" ]
 
 jobs:
-  build:
+  setup:
 
     runs-on: ubuntu-latest
 
@@ -29,4 +29,11 @@ jobs:
     - run: npm install -g yarn
     - run: yarn install
     - run: yarn clean && yarn bs-common
-    - run: yarn test
+
+  test:
+    - uses: actions/setup-node@v3
+    - run: yarn test:ci
+
+  build:
+    - uses: actions/setup-node@v3
+    - run: yarn build-web
