--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,8 +32,8 @@ jobs:
 
     # Test
     - name: test
-    - run: yarn test:ci
+      run: yarn test:ci
 
     # Build
     - name: build
-    - run: yarn build-web
+      run: yarn build-web
