--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Pre-Pipeline check
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    name: Pre-Pipeline check
+    name: Test and build
     runs-on: ubuntu-latest
 
     strategy:
@@ -20,7 +20,6 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-      # Setup
       - name: Checkout code
         uses: actions/checkout@v3
       - name: Setup Node.js ${{ matrix.node-version }}
@@ -35,10 +34,8 @@ jobs:
       - name: Install project
         run: yarn clean && yarn bs-common
 
-      # Test
       - name: test
         run: yarn test:ci
 
-      # Build
       - name: build
         run: yarn build-web
