--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,41 +1,38 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Pre-Pipeline check
-
 on:
   push:
-    branches: [ "dev", "stage", "master" ]
+    branches:
+      - dev
+      - stage
+      - master
   pull_request:
-    branches: [ "dev", "stage", "master" ]
-
+    branches:
+      - dev
+      - stage
+      - master
 jobs:
   build:
     name: Test and build
     runs-on: ubuntu-latest
-
     strategy:
       matrix:
-        node-version: [16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+        node-version:
+          - 16.x
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Setup Node.js ${{ matrix.node-version }}
+      - name: 'Setup Node.js ${{ matrix.node-version }}'
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
+          node-version: '${{ matrix.node-version }}'
+          cache: npm
       - name: Install Yarn
         run: npm install -g yarn
       - name: Install dependencies
         run: yarn install
       - name: Install project
         run: yarn clean && yarn bs-common
-
       - name: test
-        run: yarn test:ci
-
+        run: 'yarn test:ci'
       - name: build
         run: yarn build-web
