--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,33 +1,33 @@
-name: Pre-Pipeline check
+# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
+
+name: Node.js CI
+
 on:
   push:
-    branches:
-      - dev
-      - stage
-      - master
+    branches: [ "dev", "stage", "master" ]
   pull_request:
-    branches:
-      - dev
-      - stage
-      - master
+    branches: [ "dev", "stage", "master" ]
+
 jobs:
-  build:
-    name: Test and build
+  setup:
+
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
-        node-version:
-          - 16.x
+        node-version: [16.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: 'Setup Node.js ${{ matrix.node-version }}'
-        uses: actions/setup-node@v3
-        with:
-          node-version: '${{ matrix.node-version }}'
-          cache: npm
-      - run: npm install -g yarn
-      - run: yarn install
-      - run: yarn clean && yarn bs-common
-      - run: 'yarn test:ci'
-      - run: yarn build-web
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm install -g yarn
+    - run: yarn install
+    - run: yarn clean && yarn bs-common
+    - run: yarn test:ci
+    - run: yarn build-web
