--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,27 +1,46 @@
 {
-  "name": "common",
-  "private": true,
-  "version": "0.1.0",
-  "description": "",
-  "module": "dist/index.js",
-  "author": "",
-  "license": "ISC",
-  "scripts": {
-    "transpile": "babel src -d dist --copy-files"
-  },
-  "dependencies": {
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "devDependencies": {
-    "@babel/preset-react": "^7.0.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "react-scripts": "^5.0.1"
-  }
+    "name": "common",
+    "private": true,
+    "version": "0.1.0",
+    "description": "",
+    "module": "dist/index.js",
+    "author": "",
+    "license": "ISC",
+    "scripts": {
+        "transpile": "babel src -d dist --copy-files",
+        "lint:js": "eslint --ignore-path ../../.gitignore . --fix",
+        "lint:json": "prettier --ignore-path ../../.gitignore **/*.json --write",
+        "lint:html": "prettier --ignore-path ../../.gitignore **/*.*htm* --write",
+        "lint:css:prettier": "prettier --ignore-path ../../.gitignore **/*.css --write",
+        "lint:css:stylelint": "stylelint --ignore-path ../../.gitignore '**/*.css' --allow-empty-input --fix",
+        "lint": "yarn lint:js ; yarn lint:json; yarn lint:html; yarn lint:css:prettier; yarn lint:css:stylelint"
+    },
+    "dependencies": {
+        "react": "^16.8.1",
+        "react-dom": "^16.8.1"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "devDependencies": {
+        "@babel/preset-react": "^7.0.0",
+        "babel-cli": "^6.26.0",
+        "babel-core": "^6.26.3",
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-react": "^6.24.1",
+        "eslint": "^8.26.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-react": "^7.31.10",
+        "husky": "^8.0.1",
+        "prettier": "^2.7.1",
+        "prettier-plugin-jsdoc": "^0.4.2",
+        "react-scripts": "^5.0.1",
+        "stylelint": "^14.14.1",
+        "stylelint-config-idiomatic-order": "^9.0.0",
+        "stylelint-config-recommended": "^9.0.0"
+    },
+    "lint-staged": {
+        "*.js": "eslint --cache --fix"
+    }
 }
